changed scrollbar, added links to icons in footer, added hover effect to top links, fixed backgorund

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,24 +5,7 @@
 @import "./blocks/logo.scss";
 @import "./blocks/buttons.scss";
 @import "./blocks/menu.scss";
-@import "./grid.scss";
+@import "./blocks/grid.scss";
 @import "./blocks/main.scss";
 @import "./blocks/footer.scss";
-
-html {
-  scroll-behavior: smooth;
-}
-
-.namu__page {
-  position: relative;
-  min-width: 320px;
-  margin: 0;
-
-  font-family: "Raleway", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-
-  color: $titletext-clr-ondark;
-  background: $main-bcg-dark;
-}
+@import "./blocks/namu__page.scss";
